# spyden

./: .coveragerc  .gitignore  CHANGELOG.md  MANIFEST.in  Makefile  README.md  pyproject.toml  setup.py
.github/workflows/: CI.yml
psnr/: __init__.py  core.py  noisestats.py  snr.py  template.py  template2.py
psnr/tests/: test_cpad.py  test_snratio.py  test_templates.py
spyden/: __init__.py  cpad.py  noisestats.py  snr.py  template.py
spyden/tests/: test_snratio.py  test_templates.py
src/spyden/: __init__.py  template.py
tests/: test_cpad.py  test_templates.py
