[build-system]
build-backend = "setuptools.build_meta"
requires = ["setuptools>=61", "wheel", "setuptools-scm"]

[project]
authors = [
  {name = "Vincent Morello", email = "vmorello@gmail.com"},
]
classifiers = [
  "Programming Language :: Python :: 3",
  "Operating System :: Unix",
  "Topic :: Scientific/Engineering :: Astronomy",
]
dependencies = [
  "numpy>=1.13",
  "matplotlib>=2.0",
]
description = "Functions to evaluate the signal-to-noise ratio of radio transients"
dynamic = ["version"]
license = "MIT"
name = "spyden"
readme = "README.md"
requires-python = ">=3.9"

[project.optional-dependencies]
dev = [
  "isort",
  "flake8",
  "black",
  "pytest",
  "pytest-cov",
  "build",
  "twine",
]

[project.urls]
Homepage = "https://github.com/v-morello/spyden"

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools_scm]
write_to = "src/spyden/_version.py"
